# opensurfaces

./: .gitignore  LICENSE  README.md  install_all.sh
docs/: Makefile  api.rst  architecture.rst  changes.rst  conf.py  extending.rst  index.rst  make.bat  mturk.rst  querying.rst  setup.rst  start.rst
prefilter/: .gitignore  README.txt  encodehdr.cpp  generate-materials-vwd.py  install-prefilter.sh  prefilter.cpp  prefilter.h
scripts/: analyze_access.sh  backup.sh  build_docs.sh  clear_database.sh  collect_static.sh  config_template.sh  create_app.sh  create_config.py  django_shell.sh  dump_database.sh  ebs_warmer.sh  enable_debug.sh  enable_production.sh  exec_gunicorn.sh  files_changed.sh  fix_permissions.sh  flush_memcached.sh  intrinsic_worker.sh  load_config.sh  make_private.sh  make_public.sh  migrate_database.sh  pg_port.sh  psql.sh  queue_length.sh  restore_database.sh  run_debug_server.sh  start_ipnb.sh  start_worker.sh  uninstall.sh  update_repo.sh  warm_cache.sh  watch_access.sh
server/: .gitignore  (+1 more)
server/intrinsic/algorithm/garces2012/intrinsic_code/lib/CImg/: CMakeLists.txt  FFTW3-Cmake.txt  cimg-additions.h  cimg-additions2.h  cimg-mlaa.h  cimg-tmo.h
server/intrinsic/algorithm/garces2012/intrinsic_code/lib/kmlocal/: CMakeLists.txt  Copyright.txt  ReadMe.txt  ToDo.txt  sacado_de.txt
server/intrinsic/algorithm/garces2012/intrinsic_code/lib/kmlocal/doc/: Makefile  kmlocal-doc.ps  kmlocal-doc.tex
server/intrinsic/algorithm/garces2012/intrinsic_code/lib/kmlocal/src/: KCtree.h  Makefile  ReadMe.txt  TODO.txt  kmlminimal.cpp  kmlsample.cpp  kmltest.cpp
(+801 files in other folders)
